# cargo-rocket-asyncgraphql-seaorm-template

./: Cargo.toml  Dockerfile  readme.md
api/: Cargo.toml
api/src/: lib.rs
api/src/graphql/: mod.rs
entity/: Cargo.toml
entity/src/: db.rs  lib.rs
migration/: Dockerfile
src/: main.rs
