[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "./api" }
clap = {version = "^4", features = [ "derive" ]}
