[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = {version="^0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "mock", "debug-print", "tests-cfg" ]}
uuid = "*"
ulid = "*"
jsonwebtoken = "^8"
serde = {version = "^1", features = ["derive"] }
serde_json = "*"
chrono = "*"
password-hash = "^0"
argon2 = "^0"
rand_core = { version = "^0", features = ["std"] }
reqwest = {version = "*", features = ["json"] }
